# ai-starship-odyssey

./: .env.example  .gitignore  AWS_ARCHITECTURE.md  README.md  architecture.md  architecture_status.md  debug_last_voice.webm  diff.txt  docker-compose.yml  future_roadmap.md  package-lock.json  package.json  run_all.ps1  stop_all.ps1  מסך-האפליקציה.md
.claude/: settings.local.json
apps/python-director/: .dockerignore  Dockerfile  bedrock_utils.py  list_models.py  main.py  opensearch_utils.py  pipeline_setup.py  requirements.txt  s3_utils.py  test_backend.py  test_direct.py  test_dm_memory.py  test_elevenlabs.py  test_gemini_env.py  test_gemini_v1.py  test_out.txt
apps/python-director/data/: engine_capabilities.md  (+1 more)
apps/web-client/: build_output.txt  index.html  package-lock.json  package.json  ts_errors.txt  ts_errors_utf8.txt  tsconfig.json  vite.config.ts
data/: planet_eros.glb  stellar_sail.glb
data/.cache/: persistent_dream_memory.json
deploy/: .env.deploy.example  deploy-all.sh  deploy-director.sh  deploy-frontend.sh  deploy-rust.sh
docs/: architecture.md  future_roadmap.md  project_tree.md
engines/core-state/: .dockerignore  Cargo.toml  Dockerfile  cargo_check_result.txt  cargo_errors.txt  cargo_output.txt  error.txt  errors_utf8.txt  final_check.txt  final_clean.txt  final_final.txt
engines/core-state/src/: api.rs  components.rs  engine_state.rs  fix_game_loop.py  fix_main.py  game_loop.rs  main.rs  split_api.py  split_api_routes.py  split_game_loop.py  split_main.py  split_world.py  systems.rs  world.rs
tmp/: test_gemini.py
(+21 files in other folders)
