[package]
name = "core-state"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.13.0" # Lightweight ECS separated from full Bevy engine
futures-util = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full", "sync", "rt", "macros"] }
tokio-stream = "0.1.18"
warp = "0.3" # Fast web framework for API endpoints from Python Director
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rand = "0.8"
